# devcontainer

./: .bazelrc  .gitignore  .pre-commit-config.yaml  .shellcheckrc  BUILD.bazel  MODULE.bazel  NOTICE  README.md  REUSE.toml
.devcontainer/: devcontainer-lock.json  devcontainer.json  post_create_command.sh
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: ci.yaml  copyright.yml  pr-title-semantic.yaml  release-and-publish.yaml  release.yaml  weekly-release.yaml
.reuse/templates/: apache-2.0.jinja2
docs/: README.md  ci.md
opengrep/: run_opengrep.sh
opengrep/mandatory/: copyright.yaml  copyright.yml
scripts/: build-arm.sh  build.sh  create_builder.sh  functions.sh  install_dive.sh  install_opengrep.sh  merge.sh  publish-arm.sh  publish.sh  release.sh  release_metadata.sh  run_reuse_annotate.sh  run_reuse_lint.sh  test.sh  test_consumer.sh  test_external_repo.sh
src/s-core-buildcontainer/: manifest.json
src/s-core-buildcontainer/.devcontainer/: devcontainer-lock.json  devcontainer.json
src/s-core-buildcontainer/.devcontainer/bazel-feature/: devcontainer-feature.json  install.sh
src/s-core-buildcontainer/.devcontainer/bazel-feature/tests/: test_default.sh
src/s-core-buildcontainer/.devcontainer/s-core-build/: devcontainer-feature.json  install.sh  versions.sh  versions.yaml
src/s-core-buildcontainer/.devcontainer/s-core-build/tests/: test_default.sh
src/s-core-buildcontainer/test-project/: test.sh
src/s-core-devcontainer/: manifest.json
src/s-core-devcontainer/.devcontainer/: Dockerfile  Dockerfile-with-proxy-vars  devcontainer-lock.json  devcontainer.json  setup-proxy.sh  unset-proxy.sh  with-proxy-vars.Dockerfile
src/s-core-devcontainer/.devcontainer/bazel-feature/: devcontainer-feature.json  install.sh  install_matching_bazel_version.sh  on_create_command.sh  versions.yaml
src/s-core-devcontainer/.devcontainer/bazel-feature/tests/: test_default.sh
src/s-core-devcontainer/.devcontainer/s-core-local/: devcontainer-feature.json  enable_pre_commit_hooks.sh  install.sh  install_matching_bazel_version.sh  on_create_command.sh  post_create_command.sh  setup_command_history.sh  update_content_command.sh  versions.sh  versions.toml  versions.txt  versions.yaml
src/s-core-devcontainer/.devcontainer/s-core-local/tests/: test_default.sh
src/s-core-devcontainer/.devcontainer/s-core-local/versions/: pyproject.toml
src/s-core-devcontainer/test-project/: test-utils.sh  test.sh
tools/: BUILD.bazel  README.md  multitool.bzl  run_precommit_tool.sh  run_tool.sh  tool_installer.py  tool_lockfile_helpers.sh  tool_lockfile_query.py
tools/lockfiles/: actionlint.lock.json  bazelisk.lock.json  buildifier.lock.json  ruff.lock.json  shellcheck.lock.json  starpls.lock.json  uv.lock.json  yamlfmt.lock.json
