# *******************************************************************************
# Copyright (c) 2026 Contributors to the Eclipse Foundation
#
# See the NOTICE file(s) distributed with this work for additional
# information regarding copyright ownership.
#
# This program and the accompanying materials are made available under the
# terms of the Apache License Version 2.0 which is available at
# https://www.apache.org/licenses/LICENSE-2.0
#
# SPDX-License-Identifier: Apache-2.0
# *******************************************************************************

load(":multitool.bzl", "multitool_aliases")

package(default_visibility = ["//visibility:public"])

exports_files(glob(["lockfiles/*.lock.json"]))

multitool_aliases("actionlint")
multitool_aliases("bazelisk")
multitool_aliases("buildifier")
multitool_aliases("ruff")
multitool_aliases("shellcheck")
multitool_aliases("starpls")
multitool_aliases("uv")
multitool_aliases("uvx")
multitool_aliases("yamlfmt")
